# mvs-texturing

./: .gitattributes  .gitignore  .travis.yml  Arguments.cpp  Arguments.h  CMakeLists.txt  COPYING.txt  DataTerm.h  Histogram.cpp  HomeeAI_README.md  LICENSE.txt  MRF.cpp  MaterialLib.cpp  ObjModel.cpp  ObjModel.h  OutlierRemoval.h  README.md  Rect.h  RectangularBin.cpp  RectangularBin.h  SmoothnessTerm.h  TexturePatch.cpp  TextureView.h  Timer.cpp  Tri.h  UniGraph.cpp  UniGraph.h  build_adjacency_graph.cpp  build_mrf.cpp  build_obj_model.cpp  debug.h  export-tarball.sh  generate_debug_colors.cpp  generate_debug_embeddings.cpp  generate_texture_patches.cpp  generate_texture_views.cpp  load_and_prepare_mesh.cpp  main.cpp  partition_mesh.cpp  poisson_blending.cpp  (+3 more)
CMakeLists/: coldet.txt  gco.txt
apps/: CMakeLists.txt
apps/texrecon/: Arguments.cpp  Arguments.h  CMakeLists.txt  arguments.cpp  arguments.h  texrecon.cpp
elibs/: CMakeLists.txt
elibs/CMakeLists/: coldet.txt  gco.txt
elibs/tbb/: FindTBB.cmake
libs/: CMakeLists.txt
libs/mrf/: CMakeLists.txt  GCOGraph.cpp  GCOGraph.h  GCOWrapper.cpp  GCOWrapper.h  Graph.cpp  Graph.h  ICMGraph.cpp  ICMGraph.h  ICMSolver.cpp  ICMSolver.h  LBPGraph.cpp  LBPGraph.h  LBPSolver.cpp  LBPSolver.h  MRF.cpp  MRF.h  gco_graph.cpp  gco_graph.h  graph.cpp  graph.h  icm_graph.cpp  icm_graph.h  lbp_graph.cpp  lbp_graph.h
libs/tex/: CMakeLists.txt  DataTerm.h  Histogram.cpp  Histogram.h  MRF.h  Material.cpp  Material.h  MaterialLib.cpp  MaterialLib.h  ObjModel.cpp  ObjModel.h  ProgressCounter.h  RectangularBin.cpp  RectangularBin.h  Settings.h  SparseTable.h  TexturePatch.cpp  TexturePatch.h  TextureView.cpp  TextureView.h  Timer.h  Tri.cpp  UniGraph.cpp  UniGraph.h  build_adjacency_graph.cpp  build_mrf.cpp  build_obj_model.cpp  calculate_data_costs.cpp  debug.h  defines.h  generate_debug_embeddings.cpp  generate_texture_atlases.cpp  generate_texture_patches.cpp  generate_texture_views.cpp  global_seam_leveling.cpp  histogram.cpp  histogram.h  local_seam_leveling.cpp  material.h  material_lib.cpp  (+33 more)
scripts/: capture_interface.py  keyframer_interface.py  requirements.txt  texture_capture.py
